@startuml

title __ALGO's Class Diagram__\n

  package sase.sase.multi {
    package sase.sase.multi.algo {
      class AlgoUnitFactory {
          {static} + createAlgoUnit()
      }
    }
  }
  

  package sase.sase.multi {
    package sase.sase.multi.algo {
      enum AlgoUnitTypes {
        ORDER
        TREE
      }
    }
  }
  

  package sase.sase.multi {
    package sase.sase.multi.algo {
      interface IAlgoUnit {
          {abstract} + calculateEvaluationPlan()
          {abstract} + calculateFullEvaluationPlan()
          {abstract} + getTrivialEvaluationPlan()
          {abstract} + getPlanCost()
          {abstract} + getMultiPlanCost()
          {abstract} + instantiateMultiPlan()
          {abstract} + instantiateMultiPlan()
          {abstract} + instantiateMultiPlan()
          {abstract} + swapRandomEventTypes()
      }
    }
  }
  

  package sase.sase.multi {
    package sase.sase.multi.algo {
      class OrderAlgoUnit {
          - orderingAlgorithm : IIncrementalOrderingAlgorithm
          - costModel : ICostModel
          - trivialOrderingAlgorithm : IOrderingAlgorithm
          + OrderAlgoUnit()
          + getCostModel()
          + calculateEvaluationPlan()
          + calculateFullEvaluationPlan()
          + getPlanCost()
          + getMultiPlanCost()
          + instantiateMultiPlan()
          + instantiateMultiPlan()
          + instantiateMultiPlan()
          + swapRandomEventTypes()
          + getTrivialEvaluationPlan()
      }
    }
  }
  

  package sase.sase.multi {
    package sase.sase.multi.algo {
      class TreeAlgoUnit {
          - treeCreator : IIncrementalTreeTopologyCreator
          - costModel : ITreeCostModel
          - trivialTreeCreator : ITreeTopologyCreator
          + TreeAlgoUnit()
          + getCostModel()
          + calculateEvaluationPlan()
          + calculateFullEvaluationPlan()
          + getPlanCost()
          + getMultiPlanCost()
          + instantiateMultiPlan()
          + instantiateMultiPlan()
          + instantiateMultiPlan()
          + swapRandomEventTypes()
          + getTrivialEvaluationPlan()
      }
    }
  }
  

  OrderAlgoUnit -up-|> IAlgoUnit
  TreeAlgoUnit -up-|> IAlgoUnit


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
